2nd section Done

--- a/index.html
+++ b/index.html
@@ -10,18 +10,36 @@
 
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="name-highlight">Kofil's</span> Portofolio</h1>
-            <h3>World-class Professional <span class="high">Webdeveloper</span> and <span class="high">Designer</span></h3>
+            <h3>World-class Professional <span class="high">Webdeveloper</span> and <span id="sp" class="high">Designer</span></h3>
             <p>
                 Hello🤓 I'm Kofil, an undergraduate student majoring in Computer Science and Engineering(CSE) in Daffodil International University, Bangladesh. Dedicated web developer with a flair for creating elegant solutions in the shortest amount of time. Due to my open-minded nature (extrovert), you will not be stressed when we work together on most volatile tasks. My specialty of mine is taking on challenges and sticking with them until the very end. 
             </p>
+            <a class="link-button" href="https://www.linkedin.com/in/mohammed-kofil-939b031b5/" target="_blank">Hire Me</a>
+            
         </div>
         <div class="half-width">
-            <img src="/images/kofil1.png" alt="">
+            <img src="/images/kofil1.png" alt="Profile Picture">
         </div>
     </section>
+
+    <section class="middle-banner">
+        <div class="half-width-1">
+            <h2>Dream Big</h2>
+            <h4>Become a <span id="sp2">Webdeveloper</span></h4>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis eligendi sint maiores dolorum suscipit. Mollitia laboriosam, unde aperiam impedit corporis hic recusandae, ad dolorum maxime vel sunt eius vero. Voluptates?
+            </p>
+            
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mohammedkofil8/">Download Resume</a>
+        </div>
+        <div class="half-width-1">
+            <img src="/images/kofil2.png" alt="Cover Photo">
+        </div>
+    </section>
+
 </body>
 </html>
