--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
         </div>
     </section>
 
-    <section class="middle-banner">
+    <section class="dearm-area">
+        <div class="half-width">
+            <img src="/images/kofil2.png" alt="Profile 2">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h4>Become a <span id="sp2">Webdeveloper</span></h4>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis eligendi sint maiores dolorum suscipit. Mollitia laboriosam, unde aperiam impedit corporis hic recusandae, ad dolorum maxime vel sunt eius vero. Voluptates?
+            </p>
+            
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mohammedkofil8/">Download Resume</a>
+        </div>
+    </section>
+
+<!--     <section class="middle-banner">
         <div class="half-width-1">
             <h2>Dream Big</h2>
             <h4>Become a <span id="sp2">Webdeveloper</span></h4>
@@ -39,7 +54,7 @@
         <div class="half-width-1">
             <img src="/images/kofil2.png" alt="Cover Photo">
         </div>
-    </section>
+    </section> -->
 
 </body>
 </html>
