My portofoli done

--- a/index.html
+++ b/index.html
@@ -34,27 +34,47 @@
             <h2>Dream Big</h2>
             <h4>Become a <span id="sp2">Webdeveloper</span></h4>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis eligendi sint maiores dolorum suscipit. Mollitia laboriosam, unde aperiam impedit corporis hic recusandae, ad dolorum maxime vel sunt eius vero. Voluptates?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident?
             </p>
             
-            <a class="link-button" target="_blank" href="https://www.facebook.com/mohammedkofil8/">Download Resume</a>
+            <a class="link-button" target="_blank" href="https://github.com/MohammedKofil">Visit My Github</a>
         </div>
     </section>
 
-<!--     <section class="middle-banner">
-        <div class="half-width-1">
-            <h2>Dream Big</h2>
-            <h4>Become a <span id="sp2">Webdeveloper</span></h4>
+    <section class="experiance-area">
+        <h2>Experiances</h2>
+        <div id="full-stack" class="half-width single-experiance">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="header-highlight">2022-Present | Pro level Webdeveloper</h3>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis eligendi sint maiores dolorum suscipit. Mollitia laboriosam, unde aperiam impedit corporis hic recusandae, ad dolorum maxime vel sunt eius vero. Voluptates?
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sunt sequi at necessitatibus? Nulla voluptatum et voluptatem voluptatibus eveniet earum saepe praesentium facere fuga quae, necessitatibus alias sequi ratione ipsum?
             </p>
-            
-            <a class="link-button" target="_blank" href="https://www.facebook.com/mohammedkofil8/">Download Resume</a>
         </div>
-        <div class="half-width-1">
-            <img src="/images/kofil2.png" alt="Cover Photo">
-        </div>
-    </section> -->
 
+        <div id="beginner-area" class="half-width single-experiance">
+            <h2>Beginner Web Developer</h2>
+            <h3 class="header-highlight">2021-2022 | Learner at online paltform</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis temporibus praesentium sapiente cumque impedit voluptates voluptatibus nulla corrupti quos, deleniti tenetur sunt, quod velit soluta animi maiores officia magnam obcaecati?
+            </p>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+        <div>
+            <p>Copyright&#169; Mohammed Kofil 2022</p>
+        </div>
+    </footer>
 </body>
 </html>
