--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             
         </div>
         <div class="half-width">
-            <img src="/images/kofil1.png" alt="Profile Picture">
+            <img src="/images/kofil1.png" alt="">
         </div>
     </section>
 
     <section class="dearm-area">
         <div class="half-width">
-            <img src="/images/kofil2.png" alt="Profile 2">
+            <img src="/images/kofil2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
