--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammed Kofil</title>
+    <link href="/images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -32,7 +33,7 @@
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
-            <h4>Become a <span id="sp2">Webdeveloper</span></h4>
+            <h4>Become a <span id="sp2">Web Developer</span></h4>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident?
             </p>
@@ -45,7 +46,7 @@
         <h2>Experiances</h2>
         <div id="full-stack" class="half-width single-experiance">
             <h2>Full Stack Web Developer</h2>
-            <h3 class="header-highlight">2022-Present | Pro level Webdeveloper</h3>
+            <h3 class="header-highlight">2022-Present | Pro level Web Developer</h3>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sunt sequi at necessitatibus? Nulla voluptatum et voluptatem voluptatibus eveniet earum saepe praesentium facere fuga quae, necessitatibus alias sequi ratione ipsum?
             </p>
