--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             
         </div>
         <div class="half-width">
-            <img src="/images/kofil1.png" alt="">
+            <img src="/photos/kofil1.png" alt="">
         </div>
     </section>
 
     <section class="dearm-area">
         <div class="half-width">
-            <img src="/images/kofil2.png" alt="">
+            <img src="/photos/kofil2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
