--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammed Kofil</title>
-    <link href="/photos/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/images/favicon1.ico" rel="icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -23,21 +23,21 @@
             
         </div>
         <div class="half-width">
-            <img src="/photos/kofil1.png" alt="">
+            <img src="/images/kofil1.png" alt="">
         </div>
     </section>
 
     <section class="dearm-area">
         <div class="half-width">
-            <img src="/photos/kofil2.png" alt="">
+            <img src="/images/kofil2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
             <h4>Become a <span id="sp2">Web Developer</span></h4>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus totam aperiam corrupti velit, quod vel molestias error consectetur? Facere corrupti culpa pariatur amet dicta dignissimos modi perferendis sint enim provident?
-            </p>
-            
+                Passion is a feeling of intense enthusiasm towards or compelling desire for someone or something. Passion can range from eager interest in or admiration for an idea, proposal, or cause; to enthusiastic enjoyment of an interest or activity; to strong attraction, excitement, or emotion towards a person. <br>
+                I also have some Passion some of them listed here.....
+            </p>          
             <a class="link-button" target="_blank" href="https://github.com/MohammedKofil">Visit My Github</a>
         </div>
     </section>
@@ -51,7 +51,6 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sunt sequi at necessitatibus? Nulla voluptatum et voluptatem voluptatibus eveniet earum saepe praesentium facere fuga quae, necessitatibus alias sequi ratione ipsum?
             </p>
         </div>
-
         <div id="beginner-area" class="half-width single-experiance">
             <h2>Beginner Web Developer</h2>
             <h3 class="header-highlight">2021-2022 | Learner at online paltform</h3>
@@ -59,7 +58,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis temporibus praesentium sapiente cumque impedit voluptates voluptatibus nulla corrupti quos, deleniti tenetur sunt, quod velit soluta animi maiores officia magnam obcaecati?
             </p>
         </div>
-
     </section>
 
     <footer>
