--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="dearm-area">
         <div class="half-width">
-            <img src="cover.png" alt="">
+            <img id="img" src="https://source.unsplash.com/random/?HTML" alt="">
         </div>
         <div class="half-width">
             <h2>Dream Big</h2>
