--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammed Kofil</title>
-    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+    <link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Supermercado+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -23,7 +23,7 @@
             
         </div>
         <div class="half-width">
-            <img src="kofil.png" alt="">
+            <img src="images/kofil.png" alt="">
         </div>
     </section>
 
